--- a/logicaltheory.tex
+++ b/logicaltheory.tex
@@ -276,9 +276,9 @@ verification $M$ is meant to denote. In practice, this judgement has
 been written in several ways:\\[10pt]
 \begin{tabular}{c|l}
   Notation & Pronunciation \\ \hline
-  $M\in P$ & $M$ is an element of $P$\\
-  $M\Vdash P$ & $M$ realizes $P$\\
-  $P\ \llcorner\mathsf{ext}\; M\lrcorner$ & $P$ is witnessed by $M$
+  $\InputMode{M}\in \InputMode{P}$ & $M$ is an element of $P$\\
+  $\InputMode{M}\Vdash \InputMode{P}$ & $M$ realizes $P$\\
+  $\InputMode{P}\ {\color{Gray}\llcorner\mathsf{ext}\;} \OutputMode{M}{\color{Gray}\lrcorner}$ & $P$ is witnessed by $M$
 \end{tabular}\\
 
 But they all mean the same thing, so we will choose the notation
