--- a/main.tex
+++ b/main.tex
@@ -91,4 +91,9 @@ meaning explanations for computational and intensional type theories.}
 \subfile{ctt}
 % \subfile{prooftheory}
 
+
+\bibliographystyle{plain}
+\nocite{*}
+\bibliography{refs}
+
 \end{document}
