--- a/main.tex
+++ b/main.tex
@@ -28,6 +28,7 @@
 
 \newcommand\isprop[1]{\ensuremath{\InputMode{#1}\;\mathit{prop}}}
 \newcommand\isset[1]{\ensuremath{\InputMode{#1}\;\mathit{type}}}
+\newcommand\eisset[2]{\ensuremath{\InputMode{#1}=\InputMode{#2}\;\mathit{type}}}
 \newcommand\istrue[1]{\ensuremath{\InputMode{#1}\;\mathit{true}}}
 \newcommand\isctx[1]{\ensuremath{\InputMode{#1}\;\mathit{ctx}}}
 \newcommand\fresh[2]{\ensuremath{\OutputMode{#1}\mathrel{\#}\InputMode{#2}}}
@@ -36,6 +37,9 @@
 \newcommand\ahyp[2]{\ensuremath{#1 & (#2)}}
 \newcommand\genj[2]{\ensuremath{\lvert_{\InputMode{#1}}\,#2}}
 \newcommand\ver[2]{\ensuremath{\InputMode{#1}\in\InputMode{#2}}}
+\newcommand\ever[3]{\ensuremath{\InputMode{#1}=\InputMode{#2}\in\InputMode{#3}}}
+\newcommand\ofty[2]{\ensuremath{\InputMode{#1}:\InputMode{#2}}}
+\newcommand\eofty[3]{\ensuremath{\InputMode{#1}=\InputMode{#2}:\InputMode{#3}}}
 \newcommand\reduce[2]{\ensuremath{\InputMode{#1}\Rightarrow\OutputMode{#2}}}
 \newcommand\areduce[2]{\ensuremath{\InputMode{#1}&\Rightarrow\OutputMode{#2}}}
 \newcommand\naturals{\ensuremath{\mathbb{N}}}
@@ -48,6 +52,7 @@
 \newcommand\checks[2]{\ensuremath{\InputMode{#1}\downarrow\InputMode{#2}}}
 
 \newcommand\type[1]{\ensuremath{\InputMode{#1}:\mathit{type}}}
+\newcommand\etype[2]{\ensuremath{\InputMode{#1}=\InputMode{#2}:\mathit{type}}}
 \newcommand\product[2]{\ensuremath{#1\&#2}}
 \newcommand\pair[2]{\ensuremath{\langle #1,#2\rangle}}
 \newcommand\fst[1]{\ensuremath{\mathsf{fst}(#1)}}
