restore ch 3; wordsmithing; citations

--- a/main.tex
+++ b/main.tex
@@ -94,7 +94,7 @@ meaning explanations for computational and intensional type theories.}
 
 \subfile{logicaltheory}
 \subfile{ctt}
-% \subfile{prooftheory}
+\subfile{prooftheory}
 
 
 \bibliographystyle{plain}
