--- a/refs.bib
+++ b/refs.bib
@@ -53,7 +53,7 @@
   note="2 volumes"
 }
 
-@book{NordstromB:promlt,
+@book{PiMLTT,
   author = "B. Nordstr{\"o}m and K. Petersson and J.M. Smith",
   title = "Programming in Martin L{\"o}f's Type Theory",
   publisher = "Oxford University Press",
@@ -82,7 +82,7 @@
   volume = 27,
   year = 2012
 }
-@incollection{series/leus/Prawitz12,
+@incollection{Prawitz12,
   added-at = {2013-01-09T00:00:00.000+0100},
   author = {Prawitz, Dag},
   biburl = {http://www.bibsonomy.org/bibtex/2ae143357cae66b26c4630bbcf16b4672/dblp},
